k8s/bot/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot-svc
  namespace: telegram-bot
spec:
  selector:
    app: telegram-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
